k8s/api-dep.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sat-sample-api-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sat-sample-api-dep
  namespace: sat-sample-api-ns
  labels:
    app: sat-sample-api-dep
spec:
  replicas: 1
  template:
    metadata:
      name: sat-sample-api-dep
      labels:
        app: sat-sample-api-dep
    spec:
      containers:
        - name: sat-sample-api-dep
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
      restartPolicy: Always
  selector:
    matchLabels:
      app: sat-sample-api-dep
---
apiVersion: v1
kind: Service
metadata:
  name: sat-sample-api-service
  namespace: sat-sample-api-ns
spec:
  selector:
    app: sat-sample-api-dep
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sat-sample-api-ingress
  namespace: sat-sample-api-ns
  annotations:
    cert-manager.io/issuer: sat-sample-api-cert-manager
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: <DOMAIN>
    http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sat-sample-api-service
              port:
                number: 80
  tls:
    - hosts:
        - <DOMAIN>
      secretName: letsencrypt-nginx-sat-sample-api
